[gd_scene load_steps=2 format=3 uid="uid://ciy06pvf60ias"]

[ext_resource type="Script" path="res://scene/ui/get_submit.gd" id="1_xfig4"]

[node name="GetSubmit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xfig4")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -175.0
offset_right = 160.0
offset_bottom = -106.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "物品"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 6

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Get" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "领取"

[node name="Submit" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "提交"

[node name="Cancel" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "取消"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Get" to="." method="_on_get_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
